Added Varnish cache. Added purge prerender entity on update.

--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -5,6 +5,8 @@ module:
   ckeditor: 0
   color_field: 0
   config: 0
+  config_filter: 0
+  config_split: 0
   ctools: 0
   datetime: 0
   dblog: 0
@@ -42,6 +44,12 @@ module:
   page_cache: 0
   path: 0
   prerender: 0
+  purge: 0
+  purge_drush: 0
+  purge_processor_cron: 0
+  purge_queuer_coretags: 0
+  purge_tokens: 0
+  purge_ui: 0
   rest: 0
   restui: 0
   search: 0
@@ -52,6 +60,7 @@ module:
   spectrum_settings: 0
   sqlsrv: 0
   statistics: 0
+  supercache: 0
   system: 0
   taxonomy: 0
   text: 0
@@ -60,9 +69,12 @@ module:
   toolbar_menu: 0
   update: 0
   user: 0
+  varnish_purge_tags: 0
+  varnish_purger: 0
   video_embed_field: 0
   video_embed_media: 0
   views_ui: 0
+  wincachedrupal: 0
   menu_admin_per_menu: 1
   menu_link_content: 1
   pathauto: 1
