--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "drupal/supercache": "^1.3",
         "drupal/varnish_purge": "^1.5",
         "drupal/wincachedrupal": "^1.11",
-        "drupal/xmlsitemap": "^1.0@alpha"
+        "drupal/xmlsitemap": "^1.0@alpha",
+        "drupal/config_split": "^1.2"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
