--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development node build/dev-server.js",
     "dev-dhr": "cross-env NODE_ENV=development node build/dev-server.js --disableHotReloading",
     "build": "cross-env NODE_ENV=production node build/build.js",
+    "build-local": "cross-env NODE_ENV=production node build/build.js --local",
     "eslint": "eslint src --ext .js --cache",
     "tslint": "tslint src/**/*.ts -c .tslintrc.js -p tsconfig.json",
     "preview": "node build/preview-server.js",
@@ -32,6 +33,7 @@
     "key-code": "^0.0.1",
     "lodash": "^4.17.4",
     "modernizr": "^3.3.1",
+    "ncp": "^2.0.0",
     "normalize.css": "^7.0.0",
     "seng-config": "^1.1.0",
     "seng-device-state-tracker": "^1.0.6",
@@ -39,7 +41,7 @@
     "seng-scss": "^1.0.0",
     "sha1": "^1.1.1",
     "vue": "^2.2.5",
-    "vue-block-system": "^0.3.4",
+    "vue-block-system": "^0.3.5",
     "vue-i18n-manager": "^3.2.2",
     "vue-router": "^2.3.0",
     "vue-transition-component": "^0.10.5",
@@ -82,7 +84,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "fs-extra": "^4.0.1",
+    "fs-extra": "^4.0.2",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.2",
@@ -99,6 +101,7 @@
     "postcss-loader": "^2.0.5",
     "prettier": "^1.7.4",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.3",
     "sass-resources-loader": "^1.2.0",
     "sassify-webpack-plugin": "^1.0.17",
