Strip out white space and html tags from the google analytics labels Add tracking

--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -40,6 +40,7 @@
     "seng-disposable": "^1.1.2",
     "seng-scss": "^1.0.0",
     "sha1": "^1.1.1",
+    "strip": "^3.0.0",
     "vue": "^2.2.5",
     "vue-block-system": "^0.3.5",
     "vue-i18n-manager": "^3.2.2",
