--- a/source/drupal/docroot/modules/custom/spectrum_shows/spectrum_shows.links.task.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows/spectrum_shows.links.task.yml
@@ -14,3 +14,37 @@ entity.genre.delete_form:
   base_route:  entity.genre.canonical
   title: Delete
   weight: 10
+
+# media type routing definition
+entity.media_type.canonical:
+  route_name: entity.media_type.canonical
+  base_route: entity.media_type.canonical
+  title: 'View'
+
+entity.media_type.edit_form:
+  route_name: entity.media_type.edit_form
+  base_route: entity.media_type.canonical
+  title: Edit
+
+entity.media_type.delete_form:
+  route_name:  entity.media_type.delete_form
+  base_route:  entity.media_type.canonical
+  title: Delete
+  weight: 10
+
+# Network routing definition
+entity.network.canonical:
+  route_name: entity.network.canonical
+  base_route: entity.network.canonical
+  title: 'View'
+
+entity.network.edit_form:
+  route_name: entity.network.edit_form
+  base_route: entity.network.canonical
+  title: Edit
+
+entity.network.delete_form:
+  route_name:  entity.network.delete_form
+  base_route:  entity.network.canonical
+  title: Delete
+  weight: 10
