--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -32,6 +32,7 @@
     "gsap": "^1.19.1",
     "key-code": "^0.0.1",
     "lodash": "^4.17.4",
+    "mapbox-gl": "^0.41.0",
     "modernizr": "^3.3.1",
     "ncp": "^2.0.0",
     "normalize.css": "^7.0.0",
