--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
@@ -3,63 +3,118 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.show.field_broadcast_schedule
-    - field.field.node.show.field_image
-    - field.field.node.show.field_show_metric
-    - field.field.node.show.field_tags
-    - field.field.node.show.field_video_external
+    - field.field.node.show.field_show_description
+    - field.field.node.show.field_show_genres
+    - field.field.node.show.field_show_id
+    - field.field.node.show.field_show_image_100
+    - field.field.node.show.field_show_image_300
+    - field.field.node.show.field_show_image_600
+    - field.field.node.show.field_show_links
+    - field.field.node.show.field_show_media_type
+    - field.field.node.show.field_show_network
+    - field.field.node.show.field_show_recommend
+    - field.field.node.show.field_show_schedules
+    - field.field.node.show.field_show_videos
     - node.type.show
   module:
-    - entity_reference_revisions
     - image
+    - link
     - user
-    - video_embed_field
 id: node.show.default
 targetEntityType: node
 bundle: show
 mode: default
 content:
-  field_broadcast_schedule:
-    type: entity_reference_revisions_entity_view
+  field_show_description:
     weight: 104
     label: above
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
-  field_image:
-    weight: 103
+    type: basic_string
+  field_show_genres:
+    weight: 105
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+  field_show_id:
+    weight: 101
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_show_image_100:
+    weight: 106
     label: above
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
     type: image
-  field_show_metric:
-    type: entity_reference_revisions_entity_view
-    weight: 102
+  field_show_image_300:
+    weight: 107
     label: above
     settings:
-      view_mode: default
-      link: ''
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
-  field_tags:
-    weight: 101
+    type: image
+  field_show_image_600:
+    weight: 108
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+  field_show_links:
+    weight: 111
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+  field_show_media_type:
+    weight: 102
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  field_video_external:
-    weight: 105
+  field_show_network:
+    weight: 103
     label: above
     settings:
-      responsive: true
-      width: 854
-      height: 480
-      autoplay: true
+      link: true
     third_party_settings: {  }
-    type: video_embed_field_video
+    type: entity_reference_label
+  field_show_recommend:
+    weight: 112
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+  field_show_schedules:
+    weight: 110
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+  field_show_videos:
+    weight: 109
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   links:
     weight: 100
 hidden: {  }
