--- a/source/drupal/docroot/modules/custom/spectrum_shows/spectrum_shows.links.task.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows/spectrum_shows.links.task.yml
@@ -82,3 +82,21 @@ entity.schedule.delete_form:
   base_route:  entity.schedule.canonical
   title: Delete
   weight: 10
+
+# Success story routing definition
+entity.success_story.canonical:
+  route_name: entity.success_story.canonical
+  base_route: entity.success_story.canonical
+  title: 'View'
+
+entity.success_story.edit_form:
+  route_name: entity.success_story.edit_form
+  base_route: entity.success_story.canonical
+  title: 'Edit'
+
+entity.success_story.delete_form:
+  route_name:  entity.success_story.delete_form
+  base_route:  entity.success_story.canonical
+  title: Delete
+  weight: 10
+
