--- a/source/drupal/docroot/modules/custom/spectrum_shows/spectrum_shows.permissions.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows/spectrum_shows.permissions.yml
@@ -87,3 +87,21 @@ edit schedule entities:
 
 view schedule entities:
   title: 'View Schedule entities'
+
+# Success story
+add success story entities:
+  title: 'Create new Success story entities'
+
+administer success story entities:
+  title: 'Administer Success story entities'
+  description: 'Allow to access the administration form to configure Success story entities.'
+  restrict access: true
+
+delete success story entities:
+  title: 'Delete Success story entities'
+
+edit success story entities:
+  title: 'Edit Success story entities'
+
+view success story entities:
+  title: 'View published Success story entities'
