--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
@@ -3,18 +3,21 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.show.field_broadcast_schedule
-    - field.field.node.show.field_image
-    - field.field.node.show.field_show_metric
-    - field.field.node.show.field_tags
-    - field.field.node.show.field_video_external
-    - image.style.thumbnail
+    - field.field.node.show.field_show_description
+    - field.field.node.show.field_show_genres
+    - field.field.node.show.field_show_id
+    - field.field.node.show.field_show_image_100
+    - field.field.node.show.field_show_image_300
+    - field.field.node.show.field_show_image_600
+    - field.field.node.show.field_show_links
+    - field.field.node.show.field_show_media_type
+    - field.field.node.show.field_show_network
+    - field.field.node.show.field_show_recommend
+    - field.field.node.show.field_show_schedules
+    - field.field.node.show.field_show_videos
     - node.type.show
   module:
-    - image
-    - paragraphs
     - path
-    - video_embed_field
 id: node.show.default
 targetEntityType: node
 bundle: show
@@ -22,79 +25,51 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     settings: {  }
     third_party_settings: {  }
-  field_broadcast_schedule:
-    type: entity_reference_paragraphs
-    weight: 34
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-    third_party_settings: {  }
-  field_image:
-    weight: 33
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-    type: image_image
-  field_show_metric:
-    type: entity_reference_paragraphs
-    weight: 32
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-    third_party_settings: {  }
-  field_tags:
-    weight: 31
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete_tags
-  field_video_external:
-    weight: 35
-    settings: {  }
-    third_party_settings: {  }
-    type: video_embed_field_textfield
   path:
     type: path
-    weight: 30
+    weight: 5
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 3
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 4
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_show_description: true
+  field_show_genres: true
+  field_show_id: true
+  field_show_image_100: true
+  field_show_image_300: true
+  field_show_image_600: true
+  field_show_links: true
+  field_show_media_type: true
+  field_show_network: true
+  field_show_recommend: true
+  field_show_schedules: true
+  field_show_videos: true
