--- a/source/drupal/var/drupal-config/sync/core.extension.yml
+++ b/source/drupal/var/drupal-config/sync/core.extension.yml
@@ -58,6 +58,7 @@ module:
   serialization: 0
   spectrum_rest: 0
   spectrum_settings: 0
+  spectrum_shows: 0
   sqlsrv: 0
   statistics: 0
   supercache: 0
@@ -74,7 +75,6 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   views_ui: 0
-  wincachedrupal: 0
   menu_admin_per_menu: 1
   menu_link_content: 1
   pathauto: 1
