--- a/source/drupal/var/drupal-config/sync/config_split.config_split.ignore_config.yml
+++ b/source/drupal/var/drupal-config/sync/config_split.config_split.ignore_config.yml
@@ -11,7 +11,8 @@ blacklist:
   - prerender.settings
   - system.file
   - xmlsitemap.xmlsitemap.NXhscRe0440PFpI5dSznEVgmauL25KojD7u4e9aZwOM
-graylist: {  }
+graylist:
+  - system.performance
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
