--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.program.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.program.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.field.paragraph.program.field_image
     - field.field.paragraph.program.field_label
     - field.field.paragraph.program.field_paragraph
+    - field.field.paragraph.program.field_percentage
     - field.field.paragraph.program.field_tags
-    - field.field.paragraph.program.field_title
     - field.field.paragraph.program.field_video
     - image.style.preview_500xauto
     - paragraphs.paragraphs_type.program
@@ -21,7 +21,7 @@ bundle: program
 mode: default
 content:
   field_heading:
-    weight: 10
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -35,34 +35,37 @@ content:
     third_party_settings: {  }
     type: image
   field_label:
-    weight: 5
+    weight: 3
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
   field_paragraph:
-    weight: 2
+    weight: 1
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+  field_percentage:
+    weight: 2
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
   field_tags:
-    weight: 7
+    weight: 4
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  field_title:
-    weight: 4
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
   field_video:
-    weight: 8
+    weight: 5
     label: above
     settings:
       link: true
