--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blockfiltercontent.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blockfiltercontent.default.yml
@@ -3,9 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.blockfiltercontent.field_apply_label
+    - field.field.paragraph.blockfiltercontent.field_close_label
     - field.field.paragraph.blockfiltercontent.field_filter_label
-    - field.field.paragraph.blockfiltercontent.field_load_more_label
     - field.field.paragraph.blockfiltercontent.field_styles
     - paragraphs.paragraphs_type.blockfiltercontent
   module:
@@ -30,8 +29,8 @@ targetEntityType: paragraph
 bundle: blockfiltercontent
 mode: default
 content:
-  field_apply_label:
-    weight: 3
+  field_close_label:
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -39,13 +38,6 @@ content:
     type: string_textfield
   field_filter_label:
     weight: 4
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-  field_load_more_label:
-    weight: 2
     settings:
       size: 60
       placeholder: ''
