--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.blockfiltercontent.field_close_label.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.blockfiltercontent.field_close_label.yml
@@ -1,19 +1,21 @@
-uuid: 7d6c78aa-3f7f-4cfc-8c0e-85d5d5da2739
+uuid: 37db3c8d-6120-4940-a0b7-e6e470dfb625
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_load_more_label
+    - field.storage.paragraph.field_close_label
     - paragraphs.paragraphs_type.blockfiltercontent
-id: paragraph.blockfiltercontent.field_load_more_label
-field_name: field_load_more_label
+id: paragraph.blockfiltercontent.field_close_label
+field_name: field_close_label
 entity_type: paragraph
 bundle: blockfiltercontent
-label: 'Load more label'
+label: 'Close label'
 description: ''
-required: true
+required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: Close
 default_value_callback: ''
 settings: {  }
 field_type: string
