--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -53,6 +53,7 @@
     "vue-i18n-manager": "^3.2.2",
     "vue-router": "^2.3.0",
     "vue-scrollto": "^2.8.0",
+    "vue-social-sharing": "^2.2.10",
     "vue-transition-component": "^0.10.5",
     "vue-types": "^1.0.1",
     "vuex": "^2.2.1",
