--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -39,6 +39,7 @@
     "ncp": "^2.0.0",
     "normalize-wheel": "^1.0.1",
     "normalize.css": "^7.0.0",
+    "object-fit-images": "^3.2.3",
     "seng-config": "^1.1.0",
     "seng-device-state-tracker": "^1.1.2",
     "seng-disposable": "^1.1.2",
