--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "composer/installers": "^1.0.20",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "8.2.*",
+        "drupal/core": "~8.4",
         "drush/drush": "~8.1",
         "drupal/menu_admin_per_menu": "^1.0",
         "drupal/metatag": "1.0",
@@ -59,8 +59,8 @@
         "drupal/xmlsitemap": "^1.0@alpha",
         "drupal/config_split": "^1.2",
         "drupal/console": "~1.0",
-        "drupal/migrate_plus": "^2.0",
-        "drupal/migrate_tools": "^2.0"
+        "drupal/migrate_plus": "^4.0",
+        "drupal/migrate_tools": "4.x-dev"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
