--- a/source/drupal/docroot/modules/custom/spectrum_rest/spectrum_rest.routing.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_rest/spectrum_rest.routing.yml
@@ -22,6 +22,6 @@ spectrum_rest.view_counter:
 spectrum_rest.shows_import:
   path: 'api/v1/shows/import'
   defaults: { _controller: '\Drupal\spectrum_rest\Controller\ShowsController::import' }
-  methods:  [POST]
+  methods:  [POST, GET]
   requirements:
     _access: 'TRUE'
