--- a/tools/ci/Makefile
+++ b/tools/ci/Makefile
@@ -6,6 +6,9 @@ all: clean generate-block-documentation
 clean:
 	-rm -rf ../../source/frontend/documentation/*
 
+build-containers:
+	docker-compose build
+
 generate-block-documentation:
 	docker-compose run --rm  -w /app/source/frontend/src frontend generate-block-documentation
 
