--- a/tools/ci/frontend/Dockerfile
+++ b/tools/ci/frontend/Dockerfile
@@ -8,6 +8,7 @@ RUN apk add yarn
 RUN apk add nodejs
 RUN apk add nodejs-npm
 RUN npm install typings --global
+RUN npm install cross-env --global
 RUN npm install -g vue-block-documentation
 WORKDIR /app
 RUN yarn
