--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -48,6 +48,7 @@
     "sha1": "^1.1.1",
     "sticky-js": "^1.2.0",
     "strip": "^3.0.0",
+    "url-parse": "^1.2.0",
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.2.5",
     "vue-block-system": "^0.7.3",
