Created rest for Block Video With Content B

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_b.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.video_internal
     - field.field.paragraph.block_video_with_content_b.field_alignment
     - field.field.paragraph.block_video_with_content_b.field_link
     - field.field.paragraph.block_video_with_content_b.field_new_heading
@@ -13,7 +14,7 @@ dependencies:
     - field.field.paragraph.block_video_with_content_b.field_video
     - paragraphs.paragraphs_type.block_video_with_content_b
   module:
-    - entity_reference_revisions
+    - entity_browser
     - paragraphs
     - text
 id: paragraph.block_video_with_content_b.default
@@ -28,22 +29,28 @@ content:
     type: options_select
     region: content
   field_link:
-    weight: 2
+    weight: 6
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_new_heading:
-    weight: 8
+    weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: heading
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
     weight: 3
@@ -55,7 +62,7 @@ content:
     region: content
   field_poster:
     type: entity_reference_paragraphs
-    weight: 7
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -66,7 +73,7 @@ content:
     third_party_settings: {  }
     region: content
   field_scroll_id:
-    weight: 9
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -76,20 +83,27 @@ content:
   field_styles:
     weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_video:
-    weight: 6
+    weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: video_internal
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_browser_entity_reference
     region: content
 hidden:
   created: true
